@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Fix +define+A+B to define A and B to match other simulators, bug847. [Adam Krolnik]
 
+***	Show old and new value when redefining a define, bug846. [Adam Krolnik]
+
 ****	Fix loss of trireg on output signals, msg1491. [Matt Lanahan]
 
 ****	Fix quoted comment slashes in defines, bug845. [Adam Krolnik]
